@@ -9,7 +9,10 @@
       original in the event of an error
     - Add a signature to crontab entries generated by fwbackups, enabling
       the cleaner to distinguish between generated entries and fwbackups-run
-      entries added by the user.
+      entries added by the user
+    - Add a timer when saving the crontab, killing the crontab process after 6
+      seconds of waiting; fwbackups no longer hangs when the crontab cannot be
+      saved due to an error in the manual times entry
   
   * Wed Jul 7 2010 Stewart Adam <s.adam at diffingo.com>
     - Fix a problem where all tokens values would be wrapped in square brackets
